# RenoDeAragon

./: .gitignore  CMakeLists.txt  GameArchitecture.md  LICENSE  README.md  crop_sprites.py  game.html  game.js  game.wasm  index.js  index.wasm  web_build.sh
docs/: DEVELOPMENT.md
include/: particles.h  star_donut.h
src/: Game.cpp  Game.h  cloud.cpp  cloud.h  constants.h  enemy.cpp  enemy.h  game.cpp  game.h  level.cpp  level.h  main.cpp  particles.cpp  particles.h  platform.cpp  platform.h  player.cpp  player.h  sunlight.cpp  sunlight.h
src/core/: Constants.h  Types.h
src/entities/: Enemy.h  Entity.h  Player.cpp  Player.h  Roach.cpp  Roach.h  Spider.cpp  Spider.h
src/web_shell/: shell.html  style.css
src/world/: Level.cpp  Level.h  Platform.h
web_build/: index.html  index.js  index.wasm
